--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a bookmark</h1>
 
-<%= form_for @bookmark do |f| %>
-  <%= f.label :comment %>
-  <%= f.text_field :comment %>  
+<%= simple_form_for [@list , @bookmark] do |f| %>
+  <%= f.input :comment %>
+  <%= f.association :movie %>
   <%= f.submit %>
 <% end %>
