--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -20,3 +20,6 @@
     </ul>
     <%= link_to "Add a list" , new_list_path , :class => "btn btn-primary"%>
   </div>
+
+  <%= cl_image_tag("boris",
+      width: 400, height: 300, crop: :fill) %>
