upload image creating list

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,5 +3,6 @@
 <%= form_for @list do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
