--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,7 +10,7 @@
       <% @lists.each do |list| %>
 
       <div class="card-product ">
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <img src=<%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %> />
         <div class="card-product-infos">
           <h2><%= link_to  "#{list.name}", list_path(list.id) %></h2>
           <p>Product description with <strong>relevant info</strong> only.</p>
@@ -21,5 +21,3 @@
     <%= link_to "Add a list" , new_list_path , :class => "btn btn-primary"%>
   </div>
 
-  <%= cl_image_tag("boris",
-      width: 400, height: 300, crop: :fill) %>
