--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,19 +1,19 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1535016120720-40c646be5580?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1558258021-971dd2148be5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);">
   <div class="container">
-    <h1>Ajouter vos <strong>listes</strong> to <strong>comme vous voulez</strong>!</h1>
-    <p>Change your life en creant des listes de movies avec des bookmarks</p>
+    <h1>Ajouter vos <strong> meilleures playlists</strong> de <strong>Booba</strong>!</h1>
+    <p>Comment ne pas être un pitbull, quand la vie est une chienne</p>
   </div>
   </div>
   <div class="container">
-    <h1 class ="text-center">List de liste</h1>  
+    <h1 class ="text-center">Tes playlists de Booba</h1>  
     <ul>
       <% @lists.each do |list| %>
 
       <div class="card-product ">
-        <img src=<%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %> />
+        <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
         <div class="card-product-infos">
           <h2><%= link_to  "#{list.name}", list_path(list.id) %></h2>
-          <p>Product description with <strong>relevant info</strong> only.</p>
+          <p>Les meilleurs sons de <strong>Booba</strong>.</p>
         </div>
       </div>
       <% end %>
