added delete list method

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,25 +1,30 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1558258021-971dd2148be5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);">
+<div class="banner"
+  style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1558258021-971dd2148be5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80);">
   <div class="container">
     <h1>Ajouter vos <strong> meilleures playlists</strong> de <strong>Booba</strong>!</h1>
     <p>Comment ne pas être un pitbull, quand la vie est une chienne</p>
   </div>
-  </div>
-  <div class="container">
-    <h1 class ="text-center">Tes playlists de Booba</h1>  
-    <ul>
-      <% @lists.each do |list| %>
+</div>
+<div class="container">
+  <h1 class="text-center">Tes playlists de Booba</h1>
+  <ul>
+    <% @lists.each do |list| %>
 
       <div class="card-product ">
         <% if list.photo.attached? %>
           <%= cl_image_tag list.photo.key, height: 300, width: 400, crop: :fill %>
-        <% end %>
-        <div class="card-product-infos">
-          <h2><%= link_to  "#{list.name}", list_path(list.id) %></h2>
-          <p>Les meilleurs sons de <strong>Booba</strong>.</p>
-        </div>
+            </li>
+            <% end %>
+              <div class="card-product-infos">
+                <h2>
+                  <%= link_to "#{list.name}" , list_path(list.id) %>
+                </h2>
+                <p>Les meilleurs sons de <strong>Booba</strong>.</p>
+                <%= link_to "Delete" , list_path(list.id), method: :delete, data: { confirm: "Are you sure?" } %>
+
+              </div>
       </div>
       <% end %>
-    </ul>
-    <%= link_to "Add a list" , new_list_path , :class => "btn btn-primary"%>
-  </div>
-
+  </ul>
+  <%= link_to "Add a list" , new_list_path , :class=> "btn btn-primary"%>
+</div>
