--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,32 +6,39 @@
   display: flex;
   align-items: center;
   margin: 10px;
-}
 
-.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-}
+  &:hover {
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
+  }
 
-.card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
+  i:hover {
+    color: red;
+  }
 
-.card-product p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
+  img {
+    height: 100%;
+    width: 120px;
+    object-fit: cover;
+  }
 
-.card-product .card-product-infos {
-  padding: 16px;
-}
+  h2 {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+  }
 
+  p {
+    font-size: 12px;
+    line-height: 1.4;
+    opacity: .7;
+    margin-bottom: 0;
+    margin-top: 8px;
+  }
+
+  .card-product-infos {
+    padding: 16px;
+  }
+}
 a {
   text-decoration: none;
   color: black;
