--- a/app/assets/stylesheets/components/_movie-card.scss
+++ b/app/assets/stylesheets/components/_movie-card.scss
@@ -1,13 +1,22 @@
 .movie-card {
   width: 160px;
+  text-align: center;
 
-  img {
-    object-fit: cover;
-  }
+}
 
-  p {
-    font-weight: bolder;
-    text-align: center;
-    width: 80%;
-  }
+img {
+  object-fit: cover;
+}
+
+h6 {
+  font-weight: bolder;
+  text-align: center;
+  width: 80%;
+  margin-top: 2px;
+}
+
+p {
+  font-weight: lighter;
+  font-size:small;
+  text-align:center;
 }
