--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -30,4 +30,6 @@
       <% end %>
   </ul>
   <%= link_to "Add a list" , new_list_path , :class=> "btn btn-primary"%>
+  <%= link_to "NE PAS CLIQUER" , lists_404_path , :class=> "btn btn-danger"%>
+
 </div>
