--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,3 +26,4 @@
 </div>
 <%= link_to "<i class='fas fa-backward'></i> Back to lists".html_safe, lists_path,  :class=> "btn btn-primary"%>
 <%= link_to "<i class='fas fa-bookmark'></i> Add bookmark".html_safe , new_list_bookmark_path(@list.id), :class=> "btn btn-primary" %>
+<%= link_to "NE PAS CLIQUER" , lists_404_path , :class=> "btn btn-danger"%>
